<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_secondary"
        android:backgroundTint="@color/colorGreyLightMatBlack"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/TvH1Style"
            android:padding="15dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            style="@style/TvH1Style"
            android:text="@string/delete"
            android:textColor="@color/colorRed" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rect_secondary"
        android:backgroundTint="@color/colorGreyLightMatBlack"
        android:gravity="center"
        android:padding="15dp"
        style="@style/TvH1Style"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />


</LinearLayout>

